master Add initial structure
- create packages for App Domain and Infrastructure module
- create empty classes to be there

Signed-off-by: Gaberu <gabrielrosadn@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
         <activity android:name=".App.charactersdetail.CharactersDetailActivity">
 
         </activity>
+
+        <activity android:name=".App.savedcharacters.SavedCharactersActivity">
+
+        </activity>
     </application>
 
 </manifest>
