add character detail view implementation
Signed-off-by: Gaberu <gabrielrosadn@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
 
         </activity>
 
-        <activity android:name=".App.charactersdetail.CharactersDetailActivity">
+        <activity android:name=".App.charactersdetail.CharactersDetailActivity"
+            android:theme="@style/ConstraintTheme">
 
         </activity>
 
